Fixed issue with redshift+extinction in Hoenig models

--- a/example/ngc3081.ini
+++ b/example/ngc3081.ini
@@ -5,10 +5,10 @@ Models = Hoenig
 Sampler = nestle 
 Use AGN = False
 Extinction law = chiar06
-Output file = circinus_bc_hoenig.fits
+Output file = ngc3081_bc_hoenig.fits
 
 [Observations]
-File = observations/circinus.dat
+File = observations/ngc3081_spec.cat
 
 [Priors]
 a          = uniform(-3,-0.5)
@@ -20,6 +20,6 @@ theta_sig  = uniform(7,15)
 f_wd       = uniform(0.15,2.25)
 rout       = uniform(450,500)
 angle      = uniform(0,90)
-shift      = uniform(-7,7)
-extinction = uniform(0,5)
-redshift   = uniform(0.0,0.01)
+shift      = uniform(-3,3)
+extinction = uniform(0,2)
+redshift   = uniform(0.0,0.00798)
