Fixed issue when having only spectroscopy

--- a/example/conf.ini
+++ b/example/conf.ini
@@ -5,10 +5,10 @@ Models = Nenkova
 Sampler = nestle 
 Use AGN = False
 Extinction law = chiar06
-Output file = circinus_bc.fits
+Output file = ngc7319_bc_nenkova.fits
 
 [Observations]
-File = observations/circinus.dat
+File = observations/ngc7319jwstfull.dat
 
 [Priors]
 Y          = uniform(5,100)
